--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
             autocapitalizationType="none"
         >
         </TextField>
-    <Button class="btnAddTask" text="Adicionar" (tap)="onSetTask()"></Button>
+    <Button class="btnAddTask" text="Adicionar" (tap)="addTask()"></Button>
     </Form>
     <GridLayout rows="*" columns="*">
         <ListView [items]="tasks" height="100%">
