Add update for task

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -30,3 +30,10 @@ StackLayout{
     font-size: 24;
     padding: 10;
 }
+
+.taskItemDisable{
+    font-size: 24;
+    padding: 10;
+    color: rgba(184,184,184,0.5);
+    text-decoration: line-through;
+}
