--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,12 +9,12 @@
             autocapitalizationType="none"
         >
         </TextField>
-    <Button class="btnAddTask" text="Adicionar" (tap)="addTask()"></Button>
+    <Button class="btnAddTask" text="Add" (tap)="addTask()"></Button>
     </Form>
     <GridLayout rows="*" columns="*">
         <ListView [items]="tasks.sort(sortById)" height="100%">
             <ng-template let-item="item" let-i="index" let-odd="odd" let-even="even">
-                <Label [class]="taskStyle(item.active)" [text]="item.description" (tap)="updateTask(item.id)"></Label>
+                <Label [class]="taskStyle(item.active)" [text]="item.description" (tap)="updateTask(item.id)" (longPress)="deleteTask(item.id)"></Label>
             </ng-template>
         </ListView>
     </GridLayout>
